<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FirstActivity"
    >
    <Toolbar
        android:id="@+id/tool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         >
        <ImageView
            android:id="@+id/tool_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/android"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tool"
            android:textColor="@android:color/black"
            android:layout_marginStart="8dp"
            android:textSize="20sp"/>


    </Toolbar>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#ADD8E6"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        android:scrollbarSize="20dp"/>

    <TextView
        android:id="@+id/textview1"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:textSize="16dp"
        android:text="@string/textview1"
        android:layout_marginStart="20dp"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        >

        <RadioButton
            android:id="@+id/un"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/un"
            android:textSize="20dp"
            android:paddingStart="10dp"
            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
            />
        <RadioButton
            android:id="@+id/deux"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deux"
            android:textSize="20dp"
            android:paddingStart="10dp"
            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
        />
        <RadioButton
            android:id="@+id/trois"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trois"
            android:textSize="20dp"
            android:paddingStart="10dp"
            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
            />
        <RadioButton
            android:id="@+id/quatre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quatre"
            android:textSize="20dp"
            android:paddingStart="10dp"
            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
            />
    </RadioGroup>

    <TextView
        android:id="@+id/textview2"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:textSize="16dp"
        android:layout_marginStart="20dp"
        android:text="@string/textview2"
        />
    <RadioGroup
        android:layout_marginStart="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/oui"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/oui"/>
        <RadioButton
            android:id="@+id/non"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/non"/>
    </RadioGroup>
    <LinearLayout
        android:layout_marginStart="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/quitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/quitter"
            android:backgroundTint="#BFBCBC"
            app:cornerRadius="0dp"
            android:textColor="@android:color/black"
            android:textSize="18dp"/>
        <Button
            android:id="@+id/suivant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suivant"
            android:backgroundTint="#BFBCBC"
            app:cornerRadius="0dp"
            android:textColor="@color/black"
            android:textSize="18dp"
            />

    </LinearLayout>

</LinearLayout>